tests/oauth2/OLD/kcvs/keycloak3-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: canvas
  name: canvas-keycloak3
spec:
  # internalTrafficPolicy: Cluster
  # ipFamilies:
  # - IPv4
  # ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8083
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: canvas
    app.kubernetes.io/name: keycloak
  # sessionAffinity: None
  type: ClusterIP
