tests/oauth2/OLD/kcvs/keycloak3-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  namespace: canvas
  name: canvas-keycloak3-vs
spec:
  gateways:
  - components/component-gateway
  hosts:
  - canvas-keycloak3.ihc-dt.cluster-3.de
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: canvas-keycloak3.canvas.svc.cluster.local
        port:
          number: 8083
